# XrayDriver

./: .gitignore  CMakeLists.txt  README.md  arm.sh  armv8  build-arm.sh  conanfile.py  conanfile.txt  show-files.ps1  show-files.sh  test_xray_api.py  x86_64-conan
.profiles/: arm64_2  linux_gcc11  linux_x86-64
build-arm/: CMakeCache.txt
ci/armv8-ubuntu18.04-conan-dockcross/: Dockerfile  Makefile  x86_64-conan
ci/armv8-ubuntu24.04-conan/: Dockerfile  Makefile
cmake/: toolchain-arm64.cmake
driver_manager/driver_manager/: CMakeLists.txt  Main.qml  WindowControls.qml  main.cpp
driver_manager/driver_manager/res/: resources.qrc
include/: commandservice.h  daemonizer.h  eventnotifier.h  httpserver.h  iprotocolstrategy.h  singleton.h  xrayprotocolstrategy.h  xraytubecontroller.h
include/driver/: commands.h  event.h  eventnotifier.h  iprotocolstrategy.h  power_regulator.h  recognition_provider.h  singleton.h  syncverifier.h  xrayprotocolstrategy.h  xraytubecontroller.h
include/service/: daemonizer.h  db.h  filesystem_utils.h  logger.h  parser.h  restclient.h  testrecord.h  testserver.h
recipes/m4/1.4.19/all/: conandata.yml
recipes/m4/1.4.19/all/patches/: 1.4.19-0005-help2man-disable.patch
resources/: LICENSE.txt  driver.rc
src/: commandservice.cpp  daemonizer.cpp  eventnotifier.cpp  iprotocolstrategy.cpp  main.cpp  syncverifier.cpp  xrayprotocolstrategy.cpp  xraytubecontroller.cpp
src/driver/: commands.cpp  eventnotifier.cpp  iprotocolstrategy.cpp  power_regulator.cpp  recognition_provider.cpp  syncverifier.cpp  xrayprotocolstrategy.cpp  xraytubecontroller.cpp
src/service/: daemonizer.cpp  db.cpp  filesystem_utils.cpp  logger.cpp  parser.cpp  restclient.cpp  testserver.cpp
xray_microcontroller/xray_tube_microcontroller/: XrayDriver.code-workspace  platformio.ini
xray_microcontroller/xray_tube_microcontroller/src/: main.cpp
